--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GorilasTM</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/gorilas logo .png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/gorilas logo.PNG" type="image/x-icon">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,7 +26,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
 
-            <a href="index.html"><img src="img/gorilas logo.png" alt="logo empresa" class="logo"></a>
+            <a href="index.html"><img src="img/gorilas logo.PNG" alt="logo empresa" class="logo"></a>
 
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">Gorilas</a>
