--- a/pago.html
+++ b/pago.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GorilasTM</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="img/gorilas logo .png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/gorilas logo.PNG" type="image/x-icon">
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
